src/Test/ElementLayout/FeatureTests/TestData/XAML/TestCases/NegativeMargins/NegMarginGridContent.xaml
<Grid Name="root" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" ShowGridLines="true">

<Grid Height="450" Width="450" Background="yellow">
	<Grid.ColumnDefinitions>
	<ColumnDefinition />
	<ColumnDefinition />
	<ColumnDefinition />
	</Grid.ColumnDefinitions>
	<Grid.RowDefinitions>
	<RowDefinition />
	<RowDefinition />
	<RowDefinition />
	</Grid.RowDefinitions>


	<Button Grid.Row="0" Grid.Column="0" Margin="-50" />
	<Button Grid.Row="1" Grid.Column="0" Margin="-15,5,10,10" />
	<Button Grid.Row="2" Grid.Column="0" Margin="-10,-20,-30,-40" />
	<Button Grid.Row="0" Grid.Column="1" Margin="-10,10" />
	<Button Grid.Row="1" Grid.Column="1" Margin="-25" />
	<Button Grid.Row="2" Grid.Column="1" Margin="25,-75,-35,-25" />
	<Button Grid.Row="0" Grid.Column="2" Margin="25,25,-25,-25" />
	<Button Grid.Row="1" Grid.Column="2" Margin="50,50,-50,-50" />
	<Button Grid.Row="2" Grid.Column="2" Margin="100,100,-100,-100" />

</Grid>

</Grid>
